--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node index.ts"
-  },
+  "build": "tsc",
+  "postinstall": "prisma generate && npm run build",
+  "start": "node dist/index.js",
+  "dev": "ts-node index.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
